# openWakeWord

./: .gitattributes  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements-dev.txt  requirements.txt  test_usage.py
backup/: setup.py
data/: README.md
data/feature/: negative_features.npy  positive_features.npy
data/huggingface/: README.md
data/music/: README.md
data/noise/: README.md
data/turn_on_the_office_lights/: turn_on_the_office_lights.onnx
data/wakeword/: README.md
data/wakeword/turn_on_the_office_lights/: turn_on_the_office_lights.onnx
examples/: basic_training.py
models/torch/hub/snakers4_silero-vad_master/src/silero_vad/data/: silero_vad_op18_ifless.onnx
openwakeword/: data.py
samples/: __main__.py  basic_usage.py  detect_from_microphone.py  reference.py  training.py
samples/dataset/: __init__.py  base.py  cv17.py
samples/utils/: __init__.py  base.py  player.py
source/: __main__.py  reference.py  training.py  vad.py
source/dataset/: base.py  cv17.py
source/models/: __init__.py  vad.py
source/utils/: __init__.py  convert.py  player.py  player2.py
tests/: test_audio_convert.py  test_audio_player.py  test_audio_player2.py  test_audio_vad.py  test_dataset.py  test_model_vad.py  test_models.py  test_numpy.py  test_player.py  test_torchcodec.py  test_usage.py  test_vad.py
tests/benchmark/: benchmark.py  benchmark_efficiency.py
tests/tools/: onnx_drawer.py
trains/: main.py
web/: streaming_server.py
